--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -17,7 +17,7 @@ jobs:
                 set -e
                 PREV=$(gh release list -R github.com/rglonek/tcconfig-ubuntu-venv -L 100 |awk '{print $(NF-1)}' |tail -1)
                 echo "Removing $PREV"
-                gh release delete $PREV -R github.com/rglonek/tcconfig-ubuntu-venv --yes --cleanup-tag
+                [ "$PREV" != "" ] && gh release delete $PREV -R github.com/rglonek/tcconfig-ubuntu-venv --yes --cleanup-tag
             - name: "Create a release"
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
