--- a/.github/workflows/make-release.yml
+++ b/.github/workflows/make-release.yml
@@ -14,10 +14,15 @@ jobs:
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                set -e
                 PREV=$(gh release list -R github.com/rglonek/tcconfig-ubuntu-venv -L 100 |awk '{print $(NF-1)}' |tail -1)
                 echo "Removing $PREV"
-                [ "$PREV" != "" ] && gh release delete $PREV -R github.com/rglonek/tcconfig-ubuntu-venv --yes --cleanup-tag
+                set -e
+                if [ "$PREV" != "" ]
+                then
+                    gh release delete $PREV -R github.com/rglonek/tcconfig-ubuntu-venv --yes --cleanup-tag
+                else
+                    echo "Not deleting - release not found"
+                fi
             - name: "Create a release"
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
